altera resources de idiomas

--- a/src/main/resources/texto.properties
+++ b/src/main/resources/texto.properties
@@ -3,18 +3,18 @@
 # and open the template in the editor.
 paciente = Paciente
 portugues = Portugues
-ingles = Ingl\u00eas
+ingles = Inglês
 fechar = Fechar
 nome = Nome
 telefone = Telefone
 email = Email
-endere\u00e7o = Endere\u00e7o
+endereco = Endereço
 amostra = Amostra
 sangueArterial = Sangue Arterial
 sangueVenoso = Sangue Venoso
 fezes = Fezes
 urina = Urina
-secrecaoNasal = Secre\u00e7\u00e3o Nasal
+secrecaoNasal = Secreção Nasal
 saliva = Saliva
 pele = Pele
 adicionar = Adicionar
